samples/_failures_safe/1761542818_5d32d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86eb1fdc.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_86eb1fdc.c:184:13: error: expected expression at end of input
  184 |             printf("Vertex %d: %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_86eb1fdc.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86eb1fdc.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86eb1fdc.c:184:13: error: expected declaration or statement at end of input
